<resources>
    <string name="theme_color_1">#1565c0</string>
    <string name="app_name">追番日记</string>

    <string name="hello_world">Hello world!</string>
    <string name="watching">未看完</string>
    <string name="watched">已看完</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_add_item">添加记录</string>
    <string name="title_activity_about">关于本应用</string>
    <string name="anime_sn">动画编号</string>
    <string name="anime_sn_hint">请输入动画编号</string>
    <string name="anime_episode">剧集</string>
    <string name="anime_episode_hint">请输入剧集数</string>
    <string name="anime_date">追番时间</string>
    <string name="save_item">保存</string>
    <string name="anime_inf_incorrect">信息不正确，请重新输入。</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
</resources>
