<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tanmaku.animejournal.AddItemActivity"
    android:id="@+id/addItemMainLayout"
    android:orientation="vertical"
    android:weightSum="1">


    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/addItemScrollView"
        android:layout_weight="1"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/anime_sn"
                android:id="@+id/textView" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/addItemAnimeNumber"
                android:hint="@string/anime_sn_hint"
                android:backgroundTint="@color/light" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/anime_episode"
                android:id="@+id/textView3"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/anime_episode_hint"
                android:id="@+id/addItemAnimeEpisode"
                android:backgroundTint="@color/light" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/anime_date"
                android:id="@+id/textView2"/>
            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addItemDatePicker"
                android:layout_gravity="center_horizontal"
                android:datePickerMode="spinner"
                android:startYear="2000"
                android:calendarViewShown="false"
                android:foregroundGravity="center|center_horizontal" />
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/background_material_light"
        android:id="@+id/addItemButtonLayout"
        android:gravity="right"
        android:layout_weight="1">
        <Button style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/addItemCancelButton"
            android:textColor="@color/light"
            android:onClick="exit" />
        <Button style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_item"
            android:id="@+id/addItemSaveButton"
            android:onClick="trySave"
            android:textColor="@color/light" />
    </LinearLayout>


</LinearLayout>
